2012-05-20  Kostas Nakos  <knakos@gmail.com>
* android/*: Implement Planetary Defense mode, a Koala Pad click-where-I-point
             mode


2012-05-19  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/USAGE: Support for
  2 KB and 4 KB ROMs used in early Atari cartridges.

* configure.ac, platform.h, atari.c, ui_basic.c, ui.[ch], sdl/init.[ch],
  sdl/main.c, sdl/sound.c, debian/rules, util/benchmark.pl, DOC/INSTALL: Merge
  basic and sdl targets - GUI and sound libraries are now autodetected or
  explicitely selected by --with-gui and --with-sound configure options.

* configure_dos.bat: Fix the dosvga and basic targets being merged.


2012-05-16  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/CREDITS, DOC/USAGE:
  Committing patch by Jakub Husak: Support for the SIC! cartridge mapping
  (without the flash programming feature).


2012-05-04  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* configure.ac, util/benchmark.pl: Merge basic, curses, ncurses, pdcurses and
  dosvga targets - appropriate GUI/input library is now autodetected or
  selected explicitely by --with-gui configure option.

* ui.c: Fix segfault in the ROM Locations menu.

* atari_basic.c: Fix some GCC warnings.


2012-05-01  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* devices.c, ide_internal.h, input.c, log.c, pbi_scsi.c, sio.c, ui.c, util.h,
  dos/dos_ints.h: Fix some GCC warnings.


2012-04-22  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* colours.[ch], colours_ntsc.[ch], colours_pal.[ch], ui.c, sdl/input.c,
  atari800.man, DOC/USAGE: More exact emulation of PAL colors, including
  colour delay - based on Altirra but with different table coeffitients,
  derived from a real machine. Colour delay values for NTSC rescaled to
  simplify the code.


2012-04-21  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sdl/input.c: Make the display adjustment keyboard shortcuts work by pressing